<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/Title"
            android:text="@string/selfie_title" />
        
        <TextView
            style="@style/Paragraph"
            android:text="@string/selfie_text" />
        
         <Button
            android:id="@+id/selfie_start_button"
            style="@style/NextButton"
            android:text="@string/selfie_start_button" />  
    </LinearLayout>

</ScrollView>