<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/Title"
            android:text="@string/direction_title" />

        <li.itcc.lieventure.vaduztour.direction.DirectionView
            android:id="@+id/direction_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_title_top" />

        <TextView
            android:id="@+id/direction_status_text"
            style="@style/Paragraph"
            android:text="@string/direction_status" />

        <Button
            android:id="@+id/next_button"
            style="@style/NextButton"
            android:text="@string/direction_next_button" />
    </LinearLayout>

</ScrollView>